# sdk

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  manifest.cpp  manifest.h  uuid.cpp  uuid.h
src/: main.cpp  manifest.cpp  uuid.h
tests/: CMakeLists.txt  main.cpp  manifest.cpp
